[package]
name = "truncatable"
version = "0.1.3"
authors = ["Nickolai <nickolaivassiliev@gmail.com>"]
repository = "https://github.com/Vassili-Dev/rust-truncatable"
edition = "2018"
license = "GPL-3.0-only"
description = "Small crate for truncatable strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
